--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,11 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/django
 
 #image
+*.png
+*.jpg
+*.svg
+static/images/
+media/
 
 .idea/
 
